==> RT-Thread/rt-thread/bsp/hc32/libraries/hc32_drivers/drv_usbd.c <==
#include <rtthread.h>
#include <rtdevice.h>
#define LOG_TAG             "drv.usbd"
#include <drv_log.h>
#include "board_config.h"
#include "irq_config.h"
#include "drv_usbd.h"

static void usbd_irq_handler(void)
{
    rt_interrupt_enter();
    usb_isr_handler(&_hc32_usbd);
    rt_interrupt_leave();
}

static rt_err_t _usbd_ep_set_stall(rt_uint8_t address)
{
    usb_stalldevep(&_hc32_usbd, address);
    return RT_EOK;
}

static rt_err_t _usbd_ep_clear_stall(rt_uint8_t address)
{
    usb_clrstall(&_hc32_usbd, address);
    return RT_EOK;
}

static rt_err_t _usbd_set_address(rt_uint8_t address)
{
    usb_devaddrset(&_hc32_usbd.regs, address);
    return RT_EOK;
}

static rt_err_t _usbd_ep_enable(uep_t ep)
{
    RT_ASSERT(ep != RT_NULL);
    RT_ASSERT(ep->ep_desc != RT_NULL);
    usb_opendevep(&_hc32_usbd, ep->ep_desc->bEndpointAddress,
                  ep->ep_desc->wMaxPacketSize, ep->ep_desc->bmAttributes);
    return RT_EOK;
}

static rt_err_t _usbd_ep_disable(uep_t ep)
{
    RT_ASSERT(ep != RT_NULL);
    RT_ASSERT(ep->ep_desc != RT_NULL);
    usb_shutdevep(&_hc32_usbd, ep->ep_desc->bEndpointAddress);
    return RT_EOK;
}

static rt_size_t _usbd_ep_read_prepare(rt_uint8_t address, void *buffer, rt_size_t size)
{
    usb_readytorx(&_hc32_usbd, address, buffer, size);
    return size;
}

static rt_size_t _usbd_ep_write(rt_uint8_t address, void *buffer, rt_size_t size)
{
    usb_deveptx(&_hc32_usbd, address, buffer, size);
    return size;
}

static rt_err_t _usbd_ep0_send_status(void)
{
    usb_deveptx(&_hc32_usbd, 0x00, NULL, 0);
    return RT_EOK;
}

int rt_hw_usbd_init(void)
{
    rt_memset((void *)&_hc32_udc, 0, sizeof(struct udcd));
    _hc32_udc.parent.type = RT_Device_Class_USBDevice;
#ifdef RT_USING_DEVICE_OPS
    _hc32_udc.parent.ops = &_ops;
#else
    _hc32_udc.parent.init = _usbd_init;
#endif
    _hc32_udc.parent.user_data = &_hc32_usbd;
    _hc32_udc.ops = &_udc_ops;
    /* Register endpoint infomation */
    _hc32_udc.ep_pool = _ep_pool;
    _hc32_udc.ep0.id = &_ep_pool[0];
#ifdef BSP_USBD_SPEED_HS
    _hc32_udc.device_is_hs = RT_TRUE;
#endif
    rt_device_register((rt_device_t)&_hc32_udc, "usbd", 0);
    rt_usb_device_init();
    return RT_EOK;
}
