==> RT-Thread/rt-thread/bsp/wch/risc-v/Libraries/ch32_drivers/drv_usbd.c <==
#include "board.h"
#include "drv_usbd.h"
#define LOG_TAG "drv.usbd"
#include "drv_log.h"
#define UEP_MPS_64          64
#define UEP_MPS_512         512
#define _get_ep_idx(address)    ((address) & USB_EPNO_MASK)
#define _get_ep_dir(address)    ((address) & USB_DIR_MASK)
#define _is_dir_in(address)     (_get_ep_dir(address) == USB_DIR_IN)
#define _is_dir_out(address)    (_get_ep_dir(address) == USB_DIR_OUT)
#define _get_dma(ep_idx)          (*(volatile uint32_t *)((uint32_t)(USBFSD->UEP0_DMA) + 4 * ep_idx))
#define _set_dma(ep_idx, addr)    (*(volatile uint32_t *)((uint32_t)(USBFSD->UEP0_DMA) + 4 * ep_idx) = addr)
#define _set_tx_len(ep_idx, len)  (*(volatile uint16_t *)((uint32_t)(USBFSD->UEP0_TX_LEN) + 4 * ep_idx) = len)
#define _get_tx_len(ep_idx)       (*(volatile uint16_t *)((uint32_t)(USBFSD->UEP0_TX_LEN) + 4 * ep_idx))
#define _set_tx_ctrl(ep_idx, val) (*(volatile uint8_t *)((uint32_t)(USBFSD->UEP0_TX_CTRL) + 4 * ep_idx) = val)
#define _get_tx_ctrl(ep_idx)      (*(volatile uint8_t *)((uint32_t)(USBFSD->UEP0_TX_CTRL) + 4 * ep_idx))
#define _set_rx_ctrl(ep_idx, val) (*(volatile uint8_t *)((uint32_t)(USBFSD->UEP0_RX_CTRL) + 4 * ep_idx) = val)
#define _get_rx_ctrl(ep_idx)      (*(volatile uint8_t *)((uint32_t)(USBFSD->UEP0_RX_CTRL) + 4 * ep_idx))

rt_err_t usbd_set_address(rt_uint8_t address)
{
    if(address > 0x7f)
        return -RT_ERROR;
    USBFSD->DEV_ADDR = (USBFSD->DEV_ADDR & USBFS_UDA_GP_BIT) | address;
    return RT_EOK;
}

rt_err_t usbd_ep_set_stall(rt_uint8_t address)
{
    uint8_t ep_idx = _get_ep_idx(address);

    if (_is_dir_out(address))
        if (ep_idx == 0)
            _set_rx_ctrl(0, USBFS_UEP_R_TOG | USBFS_UEP_R_RES_STALL);
        else
            _set_rx_ctrl(ep_idx, (_get_rx_ctrl(ep_idx) & ~USBFS_UEP_R_RES_MASK) | USBFS_UEP_R_RES_STALL);
    else
    if (ep_idx == 0)
        _set_tx_ctrl(0, USBFS_UEP_T_TOG | USBFS_UEP_T_RES_STALL);
    else
        _set_tx_ctrl(ep_idx, (_get_tx_ctrl(ep_idx) & ~USBFS_UEP_T_RES_MASK) | USBFS_UEP_T_RES_STALL);

    return RT_EOK;
}

rt_err_t usbd_ep_clear_stall(rt_uint8_t address)
{
    uint8_t ep_idx = _get_ep_idx(address);

    if (_is_dir_in(address))
        _set_tx_ctrl(ep_idx, (_get_tx_ctrl(ep_idx) & ~(USBFS_UEP_T_TOG | USBFS_UEP_T_RES_MASK)) | USBFS_UEP_T_RES_NAK);
    else
        _set_rx_ctrl(ep_idx, (_get_rx_ctrl(ep_idx) & ~(USBFS_UEP_R_TOG | USBFS_UEP_R_RES_MASK)) | USBFS_UEP_R_RES_ACK);

    return RT_EOK;
}

rt_err_t usbd_ep_enable(struct uendpoint* ep)
{
    RT_ASSERT(ep != RT_NULL);
    RT_ASSERT(ep->ep_desc != RT_NULL);

    uint8_t address = EP_ADDRESS(ep);
    uint8_t ep_idx = _get_ep_idx(address);

    if (ep_idx != 0)
    {
        uint8_t mod = _is_dir_in(address) ? _uep_tx_en(ep_idx) : _uep_rx_en(ep_idx);
        mod = _uep_mod_get(ep_idx) | mod;
        _uep_mod_set(ep_idx, mod);
    } else return -RT_ERROR;

    return RT_EOK;
}

rt_err_t usbd_ep_disable(struct uendpoint* ep)
{
    RT_ASSERT(ep != RT_NULL);
    RT_ASSERT(ep->ep_desc != RT_NULL);

    uint8_t address = EP_ADDRESS(ep);
    uint8_t ep_idx = _get_ep_idx(address);

    if (ep_idx != 0)
    {
        uint8_t mod = _is_dir_in(address) ? _uep_tx_en(ep_idx) : _uep_rx_en(ep_idx);
        mod = _uep_mod_get(ep_idx) & ~mod;
        _uep_mod_set(ep_idx, mod);
    } else return -RT_ERROR;

    return RT_EOK;
}

rt_size_t usbd_ep_read_prepare(rt_uint8_t address, void *buffer, rt_size_t size)
{
    uint8_t ep_idx = _get_ep_idx(address);

    if (_is_dir_in(address))
        return 0;

    if (size > (ep_idx ? UEP_MPS_512 : UEP_MPS_64))
        size = (ep_idx ? UEP_MPS_512 : UEP_MPS_64);

    _set_dma(ep_idx, (uint32_t)buffer);

    if (ep_idx == 0)
        if(size == 0) _set_rx_ctrl(0, USBFS_UEP_R_RES_ACK | USBFS_UEP_R_TOG);
        else _set_rx_ctrl(ep_idx, USBFS_UEP_R_RES_ACK);
    else _set_rx_ctrl(0, (_get_rx_ctrl(ep_idx) & ~USBFS_UEP_R_RES_MASK) | USBFS_UEP_R_RES_ACK | USBFS_UEP_R_TOG);

    return size;
}

rt_size_t usbd_ep_write(rt_uint8_t address, void *buffer, rt_size_t size)
{
    uint8_t ep_idx = _get_ep_idx(address);

    if (_is_dir_in(address))
        return -2;
    if ((uint32_t)buffer & 0x03)
        return -3;

    uint32_t dmabuf = _get_dma(ep_idx);

    if (size > (ep_idx ? UEP_MPS_512 : UEP_MPS_64))
        size = (ep_idx ? UEP_MPS_512 : UEP_MPS_64);

    _set_tx_len(ep_idx, size);
    if(ep_idx == 0)
    {
        if(size != 0)
            _set_dma(0, (uint32_t)buffer);
        _set_tx_ctrl(0, USBFS_UEP_T_TOG | USBFS_UEP_T_RES_ACK);
    }
    else
    {
        if(size != 0)
            rt_memcpy((void *)dmabuf, buffer, size);
        _set_tx_ctrl(ep_idx, (_get_tx_ctrl(ep_idx) & ~USBFS_UEP_T_RES_MASK) | USBFS_UEP_T_RES_ACK);
    }

    return size;
}

rt_err_t usbd_ep0_send_status(void)
{
    _set_tx_len(0, 0);
    _set_tx_ctrl(0, USBFS_UEP_T_RES_ACK | USBFS_UEP_T_TOG);
    _set_dma(0, 0);
    return RT_EOK;
}

void USBD_IRQHandler()
{
    rt_interrupt_enter();
    uint8_t int_fg = USBFSD->INT_FG;

    if (int_fg & USBFS_UIF_TRANSFER) {
        uint8_t ep_idx = USBFSD->INT_ST & USBFS_UIS_ENDP_MASK;
        uint8_t tog;
        switch (USBFSD->INT_ST & USBFS_UIS_TOKEN_MASK) {
            case USBFS_UIS_TOKEN_SETUP:
                _set_rx_ctrl(ep_idx, USBFS_UEP_R_RES_NAK);
                break;

            case USBFS_UIS_TOKEN_IN:
                if (ep_idx == 0x00)
                {
                    tog = _get_tx_ctrl(ep_idx) & USBFS_UEP_T_TOG;
                    _set_tx_ctrl(ep_idx, (_get_tx_ctrl(ep_idx) & 0b11111000) | ~tog | USBFS_UEP_T_RES_NAK);
                    if (_get_dma(ep_idx) != 0)
                    {
                        rt_usbd_ep0_in_handler(&udcd);
                    }
                }
                else
                {
                    _set_tx_ctrl(ep_idx, (_get_tx_ctrl(ep_idx) & ~USBFS_UEP_T_RES_MASK) | USBFS_UEP_T_RES_NAK);
                    rt_usbd_ep_in_handler(&udcd, ep_idx | USB_DIR_IN, _get_tx_len(ep_idx));
                }
                break;
            case USBFS_UIS_TOKEN_OUT:
                if (ep_idx == 0x00)
                {
                    if(USBFSD->INT_ST & USBFS_UIS_TOG_OK)
                    {
                        tog = _get_rx_ctrl(ep_idx) & USBFS_UEP_R_TOG;
                        _set_rx_ctrl(ep_idx, (_get_rx_ctrl(ep_idx) & 0b11111000) | ~tog | USBFS_UEP_R_RES_NAK);
                    }
                    else
                    {
                        _set_rx_ctrl(ep_idx, (_get_rx_ctrl(ep_idx) & ~USBFS_UEP_R_RES_MASK) | USBFS_UEP_R_RES_NAK);
                    }
                }
                else
                {
                    _set_rx_ctrl(ep_idx, (_get_rx_ctrl(ep_idx) & ~USBFS_UEP_R_RES_MASK) | USBFS_UEP_R_RES_NAK);
                    if (USBFSD->INT_ST & USBFS_UIS_TOG_OK) {
                        _set_rx_ctrl(ep_idx, (_get_rx_ctrl(ep_idx) & ~USBFS_UEP_R_RES_MASK) | USBFS_UEP_R_RES_NAK);
                        rt_usbd_ep_out_handler(&udcd, ep_idx | USB_DIR_OUT, 0);
                    }
                }
                break;
            default:
                break;
        }

        USBFSD->INT_FG = USBFS_UIF_TRANSFER;
    } else if (int_fg & USBFS_UIF_BUS_RST) {
        USBFSD->UEP0_TX_LEN = 0;
        USBFSD->UEP0_TX_CTRL = USBFS_UEP_T_RES_NAK;
        USBFSD->UEP0_RX_CTRL = USBFS_UEP_R_RES_NAK;

        for (uint8_t i = 1; i < 8; i++) {
            _set_tx_len(i, 0);
            _set_tx_ctrl(i, USBFS_UEP_T_RES_NAK | USBFS_UEP_T_AUTO_TOG);
            _set_rx_ctrl(i, USBFS_UEP_R_RES_NAK | USBFS_UEP_R_AUTO_TOG);
        }

        _set_rx_ctrl(0, USBFS_UEP_R_RES_ACK);
        rt_usbd_reset_handler(&udcd);

        USBFSD->INT_FG |= USBFS_UIF_BUS_RST;
    } else if (int_fg & USBFS_UIF_SUSPEND) {
        USBFSD->INT_FG = USBFS_UIF_SUSPEND;
    } else {
        USBFSD->INT_FG = int_fg;
    }

    rt_interrupt_leave();
}

int rt_hw_usbd_init()
{
    rt_err_t res = -RT_ERROR;

    rt_memset((void *)&udcd, 0, sizeof(struct uhcd));
    udcd.parent.type = RT_Device_Class_USBDevice;
    udcd.parent.user_data = (void *)USBFS_BASE;
    udcd.parent.init = dcd_init;
    udcd.ops = &udcd_ops;
    udcd.ep_pool = endpoint_pool;
    udcd.ep0.id = &endpoint_pool[0];
    udcd.device_is_hs = RT_FALSE;

    res = rt_device_register(&udcd.parent, "usbd", RT_DEVICE_FLAG_DEACTIVATE);

    if (res != RT_EOK)
    {
        rt_kprintf("register usb device failed res = %d\r\n", res);
        return -RT_ERROR;
    }

    rt_usb_device_init();

    return RT_EOK;
}
